@@ -24,6 +24,9 @@ Package org.springframework.osgi.extender
 * added filtering support for multiple versions of Spring DM namespaces
 * fixed delayed cancelation of bundles being stopped while waiting for mandatory services
 
+Package org.springframework.osgi.mock
+* added case insensitive filter comparison to avoid different behaviours between OSGi platforms
+
 
 Changes in version 1.2.0 final (2009-04-09)
 -------------------------------------------
